kubernetes/base/istio/kiali-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
    version: v1.73
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      labels:
        app: kiali
        version: v1.73
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      serviceAccountName: kiali
      containers:
        - name: kiali
          image: quay.io/kiali/kiali:v1.73
          imagePullPolicy: IfNotPresent
          command:
            - "/opt/kiali/kiali"
            - "-config"
            - "/kiali-configuration/config.yaml"
          ports:
            - name: api-port
              containerPort: 20001
              protocol: TCP
            - name: http-metrics
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: kiali-configuration
              mountPath: "/kiali-configuration"
          livenessProbe:
            httpGet:
              path: /healthz
              port: api-port
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: api-port
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: kiali-configuration
          configMap:
            name: kiali
---
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  type: NodePort
  ports:
    - name: http
      port: 20001
      targetPort: 20001
      nodePort: 30005
      protocol: TCP
    - name: http-metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: kiali
